Release 2.0 (#291)
* Fix/user settings dialogue (#229)

* refactor(user-settings-service): relocated service logic from mapper

* fix(user-settings-form): fix condition for disabling the save-button

* refactor(user-settings-form): simplify disabling condition

* Ci/new deployment (#231)

* ci(cd):

* ci(cd): added test-trigger

* ci(cd): modified startup-command

* ci(cd): added authentication to ghcr

* ci(cd): moved building of docker images to reusable workflow

* ci(cd): fix

* ci(cd): moved prod-release to new workflow

* ci(cd): fixed tag

* ci(cd): finishing touches

* ci(cd): moved contents from execute deployment into the corresponding workflows (#232)

* Dashboard edit (#226)

* feat(dashboard-overview-component): added toolbar informing about the wip state

* style(additional-info-bar-component): transformed to pill

* feat(dashboard): Ticket 18470 - Dashboard in Playground deactivated.

* feat(dashboard): Userstory 16909 - Edit Dashboard Button und Component hinzugefügt (ohne Funktion), Dashboard-Routing Module erstellt.

* feat(dashboard): Userstory 16909 - Dashboard Title can be edited now

* feat(dashboard): Userstory 16909 - Mapping von Dashboard zu DashboardDto angefangen.

* feat(dashboard): Userstory 16909 - Dashboard Bearbeitungskomponente in zwei aufgeteilt. Bearbeitung der Titel von Dashboards und Charts möglich aber noch Error im Backend.

* feat(dashboard): Userstory 16909 - Provisorische Datentransferierung von Frontend zum Backend unter Verwendung des DashboardCreationDto

* feat(dashboard): Userstory 16909 - Methoden Frames im Backend für Dashboard Updates

* feat(dashboard): Userstory 16909 - Company ID zu Dashboard hinzugefügt.

* feat(dashboard): Userstory 16909 - Chart Type Enum zu Base Chart Options hinzugefügt und während der Dashboard Bearbeitung angezeigt.

* feat(dashboard): Userstory 16909 - Chart Type Enum zu Base Chart Options hinzugefügt und während der Dashboard Bearbeitu